<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.detour2.AdvertActivity">

    <LinearLayout
        android:id="@+id/linearLayout11"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/cancel"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/cancel" />

        <ImageView
            android:id="@+id/imageOnboarding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/fog"
            android:layout_margin="15dp"
            android:adjustViewBounds="true" />

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/lightblue"
            android:textSize="15sp"
            android:textStyle="italic"
            android:text="@string/advertvisitRwanda" />

        <TextView
            android:id="@+id/textFindMoreInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/colorblack"
            android:textSize="15sp"
            android:text="@string/findMoreInfo"
            android:textStyle="italic"
            />
            <TextView
            android:id="@+id/textDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/lightblue"
            android:textSize="15sp"
            android:text="@string/advertvisitRwandaLink"
            android:textStyle="italic"
            />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
